<resources>
    <string name="app_name">FrutiControl</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="no_tienes_cuenta_registrate_ac"><u>No tienes cuenta? Registrate aquí</u></string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="granjas">Granjas</string>
    <string name="nueva_granja">Nueva granja</string>
    <string-array name="Unidades">
        <item> Seleccione las unidades... </item>
        <item> Unidades </item>
        <item> Kilos</item>
        <item> Canastillas </item>
    </string-array>
    <string-array name="TipoArbolFrutal">
        <item> Seleccione el tipo de árbol... </item>
        <item> Mango tommy </item>
        <item> Mango farchil</item>
        <item> Naranja </item>
        <item> Mandarina </item>
        <item> Limon </item>
        <item> Aguacate </item>
        <item> Banano </item>
    </string-array>
    <string-array name="TipoPoda">
        <item> Seleccione el tipo de poda... </item>
        <item> Sanitaria </item>
        <item> Formación </item>
        <item> Limpieza  </item>
        <item> Mantenimiento  </item>
    </string-array>
    <string-array name="TipoFumigacion">
        <item> Seleccione el tipo de fumigación... </item>
        <item> Insectos </item>
        <item> Hongos </item>
        <item> Hierba </item>
        <item> Ácaro </item>
        <item> Peste </item>
    </string-array>
    <string-array name="TipoFertilizacion">
        <item> Seleccione el tipo de fertilización... </item>
        <item> Crecimiento </item>
        <item> Produccion </item>
        <item> Mantenimiento </item>
    </string-array>
    <string-array name="TipoRiego">
        <item> Seleccione el tipo de riego... </item>
        <item> Natural </item>
        <item> Manual </item>
        <item> Sistema de riego  </item>
    </string-array>
    <string-array name="TipoActividad">
        <item> Seleccione el tipo de actividad... </item>
        <item> Poda </item>
        <item> Fumigación </item>
        <item> Fertilización </item>
        <item> Riego </item>
        <item> Recolección </item>
    </string-array>
    <string name="title_activity_mapa_nuevo_arbol">Map</string>
    <string name="escoger_ubicaci_n">Escoger ubicación</string>
    <string name="nueva_actividad">Nueva Actividad</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo_ingreso">Nuevo Ingreso</string>
    <string name="fecha_del_ingreso">Fecha del ingreso</string>
    <string name="valor_por_canastilla">Valor por canastilla</string>
    <string name="actividades">Actividades</string>
    <string name="rbol">Árbol</string>
    <string name="finanzas">Finanzas</string>
    <string name="nuevo_gasto">Nuevo gasto</string>
    <string name="total_costos">Total gastos</string>
    <string name="total_ingresos">Total ingresos</string>
    <string name="ver_balance">Ver balance</string>
    <string name="preferencias_de_usuario">Preferencias&#xA;de usuario</string>
    <string name="preferencias">Preferencias</string>
    <string name="valor_del_jornal">Valor del jornal</string>
    <string name="gastos">Gastos</string>
    <string name="ingresos">Ingresos</string>
    <string name="balance">Balance</string>
    <string name="perfil">Perfil</string>
    <string name="rboles">Árboles</string>
    <string name="definir_ubicaci_n">Definir ubicación</string>
    <string name="crear_rbol">Crear árbol</string>
    <string name="total">Total: $</string>
    <string name="concepto">Concepto</string>
    <string name="cantidad_de_canastillas">Cantidad de canastillas</string>
    <string name="fecha_de_fin_de_actividad">Fecha de fin de actividad</string>
    <string name="fecha_de_inicio_de_actividad">Fecha de inicio de actividad</string>
    <string name="siembra">Siembra</string>
    <string name="tipo_de_actividad">Tipo de actividad</string>
    <string name="progreso">Progreso</string>
    <string name="poda">Poda</string>
    <string name="fumigacion">Fumigacion</string>
    <string name="seleccionar_rboles">Seleccionar árboles</string>
    <string name="nuevo_rbol">Nuevo árbol</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre_de_la_granja">Nombre de la granja</string>
    <string name="crear_granja">Crear granja</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="escoja_en_que_tipo_y_subtipo_de_actividad_en_que_gast_dinero">Escoja en que tipo y subtipo de actividad gastó dinero. Si selecciona mano de obra se va a llenar con el valor por defecto de jornal. Para modificarlo puede ir a Perfil, Preferencias y modificarlo</string>
    <string name="materiales">Materiales</string>
    <string name="mano_de_obra">Mano de obra</string>
    <string name="valor">Valor</string>
    <string name="fecha_del_gasto">Fecha del gasto</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="ver_granjas">Ver granjas</string>
    <string name="ver_ingresos">Ver ingresos</string>
    <string name="ver_gastos">Ver gastos</string>
    <string name="historial_de_ingresos">Historial de ingresos</string>
    <string name="historial_de_gastos">Historial de gastos</string>
    <string name="en_caso_de_que_no_haya_aplicado_alguna_actividad_o_no_recuerde_la_fecha_puede_dejar_los_campos_vac_os_el_tipo_de_rbol_la_fecha_de_siembra_y_la_ubicaci_n_son_obligatorias">El tipo de árbol, la fecha de siembra y la ubicación son obligatorias. La fecha debe ser la actual o anterior, ya que se agregan al sistema árboles ya sembrados o árboles que se están sembrando el día actual</string>
    <string name="fecha_de_siembra">Fecha de siembra</string>
    <string name="tipo_de_rbol">Tipo de árbol</string>
    <string name="modificar_ubicaci_n">Modificar ubicación</string>
    <string name="seleccione_la_fecha_de_siembra">Seleccione la fecha de siembra</string>
    <string name="eliminar_rbol">Eliminar árbol</string>
    <string name="si_desea_modificar_o_eliminar_un_rbol_de_la_lista_debe_tocarlo">Si desea modificar o eliminar un árbol de la lista debe tocarlo</string>
    <string name="marcar_punto">Marcar punto</string>
    <string name="finalizar_marcado">Finalizar marcado</string>
    <string name="si_desea_modificar_el_progreso_de_una_actividad_debe_tocarla">Si desea modificar el porcentaje de avance de una actividad debe tocarla</string>
</resources>
