<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".NuevoGastoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardarGasto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/nuevo_gasto"
                android:textColor="@color/headerColor"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/escoja_en_que_tipo_y_subtipo_de_actividad_en_que_gast_dinero"
                android:textColor="@color/fontColor2"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerGastoTipoPoceso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp" />

            <Spinner
                android:id="@+id/spinnerGastoSubtipoProceso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMateriales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/materiales"
                    android:textColor="@color/headerColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switchMaterialesVsManoObra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:switchMinWidth="100dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewManoDeObra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/mano_de_obra"
                    android:textColor="@color/headerColor"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextFechaGasto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:drawableRight="@drawable/date"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/fecha_del_gasto"
                android:inputType="date"
                android:textColor="@color/headerColor"
                android:textColorHint="@color/headerColor" />

            <EditText
                android:id="@+id/editTextNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/concepto"
                android:inputType="textPersonName"
                android:textColor="@color/headerColor"
                android:textColorHint="@color/headerColor" />

            <EditText
                android:id="@+id/editTextValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/valor"
                android:inputType="number|numberDecimal"
                android:textColor="@color/headerColor"
                android:textColorHint="@color/headerColor" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonGuardarGasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/guardar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>